[tool.poetry]
name = "vaulta-client"
version = "0.1.0"
description = "A Python client for the Vaulta API"
authors = ["Vaulta Team <team@vaulta.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "vaulta_client" }]

[tool.poetry.dependencies]
python = ">=3.8"
requests = ">=2.25.0"
pydantic = ">=2.0.0"
urllib3 = ">=1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=22.0.0"
isort = ">=5.0.0"
mypy = ">=1.0.0"
types-requests = ">=2.28.0"

[tool.poetry.urls]
homepage = "https://github.com/estate-buddy-tech/vaulta-py"
repository = "https://github.com/estate-buddy-tech/vaulta-py"
"bug tracker" = "https://github.com/estate-buddy-tech/vaulta-py/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"